# kakao-bot-mcp-server

./: README.md  main.py  pyproject.toml  smithery.yaml
model/: auth.py
router/: auth.py
src/api/: message.py  talk_calendar.py
src/mcp_kakao/: calendar.py  kauth.py  message.py  server.py  talk_calendar.py  toolhandler.py  tools_calendar.py  tools_message.py
