[project]
name = "kakao-bot-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "oauth2client>=4.1.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]
