[project]
name = "mcp-kakao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "mcp>=1.7.1",
    "oauth2client>=4.1.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
]

[[project.authors]]
name = "Donggeon Lee"
email = "inspirit941@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-kakao = "mcp_kakao:main"
